@@ -1,4 +1,15 @@
 # EvolutionarySimulator
 
-Dla dwóch map najlepiej skorzystać z trybu pełnoekranowego - inaczej statystyki mogę nie zmieścić się na ekranie
-Przy za dużej wielkości mapy może ona ulec zniekszałceniom - w szczególności jeśli wyświetlamy dwie symulacje jednocześnie
+For two maps its best to use full screen mode (some statistics may be not visible) <br />
+Drawing too big map may make that map shows incorrectly <br />
+
+ In run/debug configuration I added to VM options these command: <br />
+
+--module-path <br />
+"file to javafx library" <br />
+--add-modules <br />
+javafx.controls,javafx.fxml <br />
+--add-exports <br />
+javafx.graphics/com.sun.javafx.sg.prism=ALL-UNNAMED <br />
+
+as it's shown in https://www.jetbrains.com/help/idea/javafx.html
